Opened 17 years ago

Closed 16 years ago

#2543 closed bug (fixed)

BTextControl::ResizeToPreferred() Does not resize to propper size

Reported by: oruizdorantes Owned by: axeld
Priority: normal Milestone: R1
Component: Kits/Interface Kit Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

in kits/bluetooth/UI/PincodeWindow.cpp

The following code:

fPincodeText = new BTextControl(BRect(rect1.left, rect1.bottom + V_SEPARATION , 0, 0), "pincode TextControl","PIN code:", "", NULL);

fPincodeText->ResizeToPreferred();

Seems not to affect to the control

Change History (4)

comment:1 by oruizdorantes, 17 years ago

Resolution: duplicate
Status: newclosed

comment:2 by anevilyak, 17 years ago

Component: - GeneralKits/Interface Kit
Resolution: duplicate
Status: closedreopened

comment:3 by axeld, 17 years ago

Does this code work in BeOS? Looking at the code in BTextControl, it should work fine, though. Can you provide a minimal test program that reproduces the problem? There are some test apps in src/tests/servers/app that might provide you with a usable shell (like view_state).

comment:4 by julun, 16 years ago

Resolution: fixed
Status: reopenedclosed

Should be fixed as of hrev27330.

Note: See TracTickets for help on using tickets.